# gutenberg-imglambda

./: .gitignore  .python-version  README.md  index.py  pyproject.toml  requirements.txt  setup.cfg  test_index.py
.github/workflows/: build.yml
config/development/: s3-bucket-us-east-1.sample  s3-key-prefix.sample
config/test/: generated-bucket.sample  original-bucket.sample  public-content-bucket.sample
imglambda/: __init__.py  typing.py
imglambda/originrequest/: index.py  test_index.py
imglambda/originresponse/: index.py
script/: autotest  create-lambda  recreate-release-venv  recreate-venv  test  upload-development  watch.py
src/origin-request/: index.py  pyproject.toml
src/origin-request/originrequest/: index.py  test_index.py
src/origin-response/: index.py  pyproject.toml  setup.cfg
src/origin-response/originresponse/: index.py
src/origin/request/: index.py  requirements.txt  test_index.py
src/origin/response/: index.py  requirements.txt
