[tool.poetry]
name = "gutenberg-imglambda"
version = "0.1.0"
description = ""
authors = ["Akihiro Harai <akihiro.harai@tarosky.co.jp>"]
readme = "README.md"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "~3.13"
pathspec = "^0.12.1"
python-json-logger = "^2.0.7"
pyvips = { extras = ["binary"], version = "^3.0.0" }
aws-lambda-powertools = "*"
mypy-boto3-s3 = "*"
mypy-boto3-sqs = "*"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
boto3-stubs = { version = "*", extras = ["s3", "sqs"] }
flake8 = "*"
isort = "*"
mypy = "*"
mypy-boto3-builder = "*"
pep8 = "*"
pytest = "*"
types-python-dateutil = "^2.9.0.20240906"
unittest-xml-reporting = "^3.2.0"
yapf = "*"

# Packages not required on AWS Lambda
boto3 = "^1.35.29"
python-dateutil = "^2.9.0"
ipython = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
order_by_type = true
balanced_wrapping = true
multi_line_output = 3

[tool.autopep8]
select = "E3"

[tool.yapf]
based_on_style = "google"
split_before_first_argument = true
dedent_closing_brackets = false
indent_width = 2
allow_split_before_dict_value = false
indent_dictionary_value = false
column_limit = 100

[tool.mypy]
exclude = ["^work/", "^script/"]
